# Skyrim-PersonalNotes

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  PersonalNotes.psc  README.bbcode  README.md  compile-papyrus.ps1  deploy.ps1  package-mod.ps1  patch_includes.h  plugin.cpp  vcpkg-configuration.json  vcpkg.json
mod/SKSE/Plugins/dmenu/customSettings/: Personal Notes Settings.json
mod/Source/Scripts/: PersonalNotes.psc  PersonalNotesNative.psc
plans/: CODE_REVIEW_plugin_cpp.md  MCM-Papyrus-example.psc  PROJECT_OVERVIEW_V2.md  Phase1_PRD_V2.md  Phase2_Display_Delete_PRD.md  Phase2_PRD_V2.md  Phase3_JournalIntegration_PRD.md  Phase4B_HUD_Simple_PRD.md  Phase4_UX_Notifications_PRD.md  Phase6_INI_Settings_PRD.md  Phase7_MCM_Menu_PRD.md  README.md  mcm_tutorial.md  mcm_tutorial_v2.md  mcm_tutorial_v3.md  mxmc_settings_ini_specs.md  wheeler-config.json
plans/TextInput- ExampleUsage-Source/: ExtendedVanillaMenus_ExampleEvents.psc  ExtendedVanillaMenus_Examples.psc  compile-papyrus.ps1
plans/journal-alternative/: api_reference.txt  implementation_guide.md  quest_map_research.md
plans/journal-integration/: IMPLEMENTATION_GUIDE.md  INDEX.txt  Phase5_GeneralNotes_PRD.md  QUICK_REFERENCE.txt  README.md  RESEARCH_DETAILED.md  SUMMARY.txt  journal-dump-quest-filter.txt  journal-dump-var-filter.txt  journal-dump.txt  log-with-journal-menu-dump.txt
toast/: toast.swf  toast.swfml
